[package]
name = "excel_reader"
version = "0.1.0"
edition = "2024"

[dependencies]
calamine = "0.27.0"
clap = "4.5.37"
polars = "0.47.1"
rayon = "1.10.0"
tempfile = "3.19.1"
thiserror = "2.0.12"
# my_lib = { path = "../my_lib" }

[dev-dependencies]
clippy = "0.0.302"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
